# cpp_project_template

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  SimpleFile.cpp  SimpleFile.h
test/: CMakeLists.txt  TestSimpleFile.cpp
